# HomeControl

./: .gitignore  CMakeLists.txt  DevToolsConsole.qml  LICENSE  NetworkDiagnosticsSheet.qml  NetworkStatusIndicator.qml  build_and_test.bat  docker-compose.yml  main.qml  test_results.json
android/: AndroidManifest.xml
cmake/: GenerateBuildInfo.cmake  IncrementBuildNumber.cmake
i18n/: HomeControl_de.ts  HomeControl_es.ts
include/Bootstrap/: AppSetup.h
include/Commands/: GenericHaCommand.h
include/Core/: AndroidLogger.h  BuildInfo.h  ConsoleLogger.h  ILogger.h  Log.h  ThreadSafeValue.h
include/Devices/: ColorableComponent.h  DeviceFactory.h  DeviceModel.h  DimmableColorLightDevice.h  DimmableComponent.h  HomeDevice.h  HomeDeviceBase.h  IColorable.h  IDeviceComponent.h  IDeviceFactory.h  ISettingsManager.h  IStoppable.h  ISwitchable.h  IValuable.h  JsonSettingsManager.h  LightDevice.h  RollerDevice.h  StatusComponent.h  StoppableComponent.h  SwitchableComponent.h  VacuumDevice.h
include/Legacy/: AlertSystem.h  ISensor.h  LuminositySensor.h  TemperatureSensor.h
include/Mqtt/: IMqttController.h  IMqttListener.h  MqttController.h
include/Network/: HaWebSocketController.h  IHaController.h
include/UI/: HaImageProvider.h  SensorBridge.h
src/: main.cpp
src/Bootstrap/: AppSetup.cpp
src/Commands/: GenericHaCommand.cpp
src/Core/: AndroidLogger.cpp  ConsoleLogger.cpp  Log.cpp
src/Devices/: ColorableComponent.cpp  DeviceFactory.cpp  DeviceModel.cpp  DimmableColorLightDevice.cpp  DimmableComponent.cpp  HomeDeviceBase.cpp  JsonSettingsManager.cpp  LightDevice.cpp  RollerDevice.cpp  StatusComponent.cpp  StoppableComponent.cpp  SwitchableComponent.cpp  VacuumDevice.cpp
src/Legacy/: AlertSystem.cpp  LuminositySensor.cpp  TemperatureSensor.cpp
src/Mqtt/: MqttController.cpp
src/Network/: HaWebSocketController.cpp
src/UI/: SensorBridge.cpp
tests/: DeviceComponentTest.cpp  DeviceFactoryTest.cpp  DeviceModelTest.cpp  DimmableColorLightDeviceTest.cpp  GenericHaCommandTest.cpp  HaWebSocketControllerTest.cpp  JsonSettingsManagerTest.cpp  LightDeviceTest.cpp  LoggerTest.cpp  MqttControllerTest.cpp  RollerDeviceTest.cpp  SensorBridgeTest.cpp  ThreadSafeValueTest.cpp  VacuumDeviceTest.cpp
